fix: page6 horizontal scroll in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
     font-family: "Noto Sans KR", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
     overflow: hidden;
+    scroll-behavior: smooth;
 }
 
 #root {
@@ -136,6 +136,6 @@ iframe.youtube-video {
     height: 100%;
 }
 
-@keyframes rotate1 {
-
+*::-webkit-scrollbar {
+    display: none;
 }
